[gd_scene load_steps=13 format=3 uid="uid://snd70w6whqbn"]

[ext_resource type="Script" path="res://UI/HUD/hud-ui.gd" id="1_o31jx"]
[ext_resource type="Texture2D" uid="uid://bmw5w0b76rnby" path="res://assets/UI/components/panel.png" id="2_nn0qi"]
[ext_resource type="Texture2D" uid="uid://cwxmk72a60l62" path="res://assets/UI/components/Frame 19.png" id="3_fgdyr"]
[ext_resource type="Texture2D" uid="uid://mo65hrfu6vsc" path="res://assets/UI/components/prograss-bar.png" id="4_durg7"]
[ext_resource type="Texture2D" uid="uid://8y0d4c6i0urd" path="res://assets/UI/components/Frame 22.png" id="5_qwegi"]
[ext_resource type="Theme" uid="uid://dei2svi60wej7" path="res://assets/UI/themes/UI-elements/round-panel-2.tres" id="6_m6cr4"]
[ext_resource type="Theme" uid="uid://bmj3854823hk4" path="res://assets/UI/themes/UI-elements/round-panel-1.tres" id="7_cwmg4"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qmntt"]
load_path = "res://.godot/imported/Run.png-9f1adbb2628751fba0e6215738b89ca3.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2e3ff"]
load_path = "res://.godot/imported/Dash.png-f765e0ec7d66f342089726cafd9492d7.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_sq1f5"]
load_path = "res://.godot/imported/Supplies.png-bb6309db2261f8c2c3cf59ab7354c59f.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_t84ke"]
load_path = "res://.godot/imported/Oxygen.png-f1f8fa7eac48a369bfec24c1a00fafa9.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_a04uw"]
load_path = "res://.godot/imported/Stamina.png-9d83d6de1632c77f8c710f4c0107ee19.ctex"

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 8
script = ExtResource("1_o31jx")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = -210.0
offset_right = 742.0
offset_bottom = 24.0001
grow_vertical = 0
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_nn0qi")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -254.0
offset_top = -90.0
offset_right = 254.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="Health" type="TextureProgressBar" parent="NinePatchRect/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(75, 125)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
step = 0.0
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("3_fgdyr")
texture_over = ExtResource("3_fgdyr")
texture_progress = ExtResource("4_durg7")

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RunIcon" type="NinePatchRect" parent="NinePatchRect/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_qwegi")

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/HBoxContainer/VBoxContainer2/HBoxContainer/RunIcon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -14.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_qmntt")
expand_mode = 2

[node name="DashIcon" type="NinePatchRect" parent="NinePatchRect/HBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_qwegi")

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/HBoxContainer/VBoxContainer2/HBoxContainer/DashIcon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.0
offset_top = -14.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_2e3ff")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SuppliesWindow" type="HBoxContainer" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/HBoxContainer/VBoxContainer/SuppliesWindow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_nn0qi")

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/HBoxContainer/VBoxContainer/SuppliesWindow/NinePatchRect"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_sq1f5")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/HBoxContainer/VBoxContainer/SuppliesWindow"]
layout_mode = 2

[node name="Supplies" type="TextureProgressBar" parent="NinePatchRect/HBoxContainer/VBoxContainer/SuppliesWindow/VBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
step = 0.0
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_under = ExtResource("3_fgdyr")
texture_over = ExtResource("3_fgdyr")
texture_progress = ExtResource("4_durg7")

[node name="SuppliesLabel" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer/SuppliesWindow/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.239216, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18

[node name="OxygenWindow" type="HBoxContainer" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/HBoxContainer/VBoxContainer/OxygenWindow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_nn0qi")

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/HBoxContainer/VBoxContainer/OxygenWindow/NinePatchRect"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_t84ke")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/HBoxContainer/VBoxContainer/OxygenWindow"]
layout_mode = 2

[node name="Oxygen" type="TextureProgressBar" parent="NinePatchRect/HBoxContainer/VBoxContainer/OxygenWindow/VBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
step = 0.0
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_under = ExtResource("3_fgdyr")
texture_over = ExtResource("3_fgdyr")
texture_progress = ExtResource("4_durg7")

[node name="OxygenLabel" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer/OxygenWindow/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.239216, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18

[node name="StaminaWindow" type="HBoxContainer" parent="NinePatchRect/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/HBoxContainer/VBoxContainer/StaminaWindow"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_nn0qi")

[node name="NinePatchRect" type="NinePatchRect" parent="NinePatchRect/HBoxContainer/VBoxContainer/StaminaWindow/NinePatchRect"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CompressedTexture2D_a04uw")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/HBoxContainer/VBoxContainer/StaminaWindow"]
layout_mode = 2

[node name="Stamina" type="TextureProgressBar" parent="NinePatchRect/HBoxContainer/VBoxContainer/StaminaWindow/VBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
step = 0.0
nine_patch_stretch = true
stretch_margin_left = 10
stretch_margin_top = 10
stretch_margin_right = 10
stretch_margin_bottom = 10
texture_under = ExtResource("3_fgdyr")
texture_over = ExtResource("3_fgdyr")
texture_progress = ExtResource("4_durg7")

[node name="StaminaLabel" type="Label" parent="NinePatchRect/HBoxContainer/VBoxContainer/StaminaWindow/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.239216, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18

[node name="Weapons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -355.0
offset_top = -326.0
offset_right = -118.0
offset_bottom = -108.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.5, 1.5)

[node name="Panel4" type="Panel" parent="Weapons"]
layout_mode = 0
offset_left = 65.0
offset_top = 78.0
offset_right = 169.0
offset_bottom = 182.0
theme = ExtResource("6_m6cr4")

[node name="Panel" type="Panel" parent="Weapons"]
layout_mode = 0
offset_left = 78.0
offset_top = 36.0
offset_right = 160.0
offset_bottom = 118.0
theme = ExtResource("7_cwmg4")

[node name="ActiveWeapon" type="TextureRect" parent="Weapons/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -31.0
offset_right = 31.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2

[node name="Panel3" type="Panel" parent="Weapons"]
layout_mode = 0
offset_left = 136.0
offset_top = 133.0
offset_right = 195.0
offset_bottom = 192.0
theme = ExtResource("7_cwmg4")

[node name="ReserveWeapon1" type="TextureRect" parent="Weapons/Panel3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -21.5
offset_right = 21.5
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2

[node name="Panel2" type="Panel" parent="Weapons"]
layout_mode = 0
offset_left = 40.0
offset_top = 131.0
offset_right = 99.0
offset_bottom = 190.0
theme = ExtResource("7_cwmg4")

[node name="ReserveWeapon2" type="TextureRect" parent="Weapons/Panel2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -21.5
offset_right = 21.5
offset_bottom = 21.5
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2

[node name="SuppliesTimer" type="Timer" parent="."]
wait_time = 0.35

[node name="OxygenTimer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="mouse_entered" from="Weapons/Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Weapons/Panel" to="." method="_on_panel_mouse_exited"]
[connection signal="mouse_entered" from="Weapons/Panel3" to="." method="_on_panel_3_mouse_entered"]
[connection signal="mouse_exited" from="Weapons/Panel3" to="." method="_on_panel_3_mouse_exited"]
[connection signal="mouse_entered" from="Weapons/Panel2" to="." method="_on_panel_2_mouse_entered"]
[connection signal="mouse_exited" from="Weapons/Panel2" to="." method="_on_panel_2_mouse_exited"]
[connection signal="timeout" from="SuppliesTimer" to="." method="_on_supplies_timer_timeout"]
[connection signal="timeout" from="OxygenTimer" to="." method="_on_oxygen_timer_timeout"]
